--- a/trump-today.html
+++ b/trump-today.html
@@ -5,17 +5,21 @@
   <title>Main about Trump today — Presidency Clock</title>
   <meta name="description" content="Daily headline about Donald Trump selected by AI based on engagement. Archive of top stories." />
 
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Main about Trump today — Presidency Clock" />
-  <meta property="og:description" content="Daily AI-picked Trump headline with short summary and archive." />
-  <meta property="og:url" content="https://presidencyclock.com/trump-today.html" />
-  <meta property="og:image" content="https://presidencyclock.com/og-image.jpg" />
+  <!-- Consent Mode v2 -->
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('consent', 'default', {
+      'ad_storage': 'denied','ad_user_data': 'denied','ad_personalization': 'denied',
+      'analytics_storage': 'denied','functionality_storage': 'granted','security_storage': 'granted'
+    });
+  </script>
 
-  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
-  <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
-  <link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
+  <!-- Funding Choices -->
+  <script async src="https://fundingchoicesmessages.google.com/i/pub-5023415479696725?ers=1"></script>
+  <script>(function(){function s(){if(!window.frames['googlefcPresent']){if(document.body){const i=document.createElement('iframe');i.style.cssText='width:0;height:0;border:0;display:none';i.name='googlefcPresent';document.body.appendChild(i);}else{setTimeout(s,0);}}}s();})();</script>
 
-  <!-- AdSense Auto ads -->
+  <!-- AdSense -->
   <meta name="google-adsense-account" content="ca-pub-5023415479696725" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5023415479696725" crossorigin="anonymous"></script>
 
@@ -28,6 +32,18 @@
   <script>
   (function(){var s=null;try{s=localStorage.getItem('pc_theme');}catch(e){};var t=s||(window.matchMedia&&window.matchMedia('(prefers-color-scheme: dark)').matches?'dark':'light');document.documentElement.setAttribute('data-theme',t);} )();
   </script>
+
+  <!-- Meta/Perf -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+  <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
+  <link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
+  <meta name="theme-color" content="#0b0f18">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Main about Trump today — Presidency Clock" />
+  <meta property="og:description" content="Daily AI-picked Trump headline with short summary and archive." />
+  <meta property="og:url" content="https://presidencyclock.com/trump-today.html" />
+  <meta property="og:image" content="https://presidencyclock.com/og-image.jpg" />
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -73,7 +89,6 @@
 
   <script src="script.js?v=4"></script>
   <script src="seo.js?v=4"></script>
-
   <script>
   (function(){function a(t){document.documentElement.setAttribute('data-theme',t);try{localStorage.setItem('pc_theme',t);}catch(e){}}var b=document.getElementById('theme-toggle');if(!b)return;b.addEventListener('click',function(){var c=document.documentElement.getAttribute('data-theme')||'light';a(c==='dark'?'light':'dark');});})();
   </script>
