--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <meta name="description" data-translate="meta_description" content="Точний зворотний відлік до кінця повноважень Дональда Трампа як 47-го Президента США: 20 січня 2029 року.">
     <meta property="og:title" data-translate="og_title" content="Скільки часу залишилося? Таймер Трампа 2029">
-    <meta property="og:url" content="ВАШ_АДРЕСА_САЙТУ">
+    <meta property="og:url" content="https://potus-countdown.vercel.app/">
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
@@ -122,7 +122,7 @@
         });
 
         // ПІСЛЯ ЗАВАНТАЖЕННЯ НА ХОСТИНГ, НЕ ЗАБУДЬТЕ:
-        // 1. Замінити "ВАШ_АДРЕСА_САЙТУ" на реальну адресу у мета-тегах.
+        // 1. Замінити "https://potus-countdown.vercel.app/" на реальну адресу у мета-тегах.
         // 2. Створити та завантажити файли `styles.css` та `script.js`.
     </script>
 </body>
