--- a/en.html
+++ b/en.html
@@ -7,7 +7,7 @@
     
     <meta name="description" data-translate="meta_description" content="Accurate countdown to the end of Donald Trump's term as the 47th President of the United States: January 20, 2029.">
     <meta property="og:title" data-translate="og_title" content="How Much Time is Left? Trump Timer 2029">
-    <meta property="og:url" content="YOUR_SITE_ADDRESS">
+    <meta property="og:url" content="https://potus-countdown.vercel.app/">
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
