--- a/es.html
+++ b/es.html
@@ -6,7 +6,7 @@
     <title data-translate="title">Cuenta Regresiva: Fin del Mandato de Donald Trump</title>
     <meta name="description" data-translate="meta_description" content="Cuenta regresiva precisa para el final del mandato de Donald Trump como el 47º Presidente de los Estados Unidos: 20 de enero de 2029.">
     <meta property="og:title" data-translate="og_title" content="¿Cuánto tiempo queda? Temporizador Trump 2029">
-    <meta property="og:url" content="YOUR_SITE_ADDRESS">
+    <meta property="og:url" content="https://potus-countdown.vercel.app/">
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
