--- a/fr.html
+++ b/fr.html
@@ -6,7 +6,7 @@
     <title data-translate="title">Compte à Rebours: Fin du Mandat de Donald Trump</title>
     <meta name="description" data-translate="meta_description" content="Compte à rebours précis jusqu'à la fin du mandat de Donald Trump en tant que 47e président des États-Unis : 20 janvier 2029.">
     <meta property="og:title" data-translate="og_title" content="Combien de temps reste-t-il ? Compteur Trump 2029">
-    <meta property="og:url" content="YOUR_SITE_ADDRESS">
+    <meta property="og:url" content="https://potus-countdown.vercel.app/">
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
