--- a/pt.html
+++ b/pt.html
@@ -6,7 +6,7 @@
     <title data-translate="title">Contagem Regressiva: Fim do Mandato de Donald Trump</title>
     <meta name="description" data-translate="meta_description" content="Contagem regressiva exata para o fim do mandato de Donald Trump como o 47º Presidente dos Estados Unidos: 20 de janeiro de 2029.">
     <meta property="og:title" data-translate="og_title" content="Quanto tempo falta? Cronômetro Trump 2029">
-    <meta property="og:url" content="YOUR_SITE_ADDRESS">
+    <meta property="og:url" content="https://potus-countdown.vercel.app/">
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
